--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Header
-navname: Bentham's Blog
+navname: DRJ's Blog
 
 # navigatior items
 nav:
   Posts: /archives
-  Categories: /category
-  Tags: /tag
+  Categories: /categories
+  Tags: /tags
   About: /about
 
 # favicon
 favicon: /favicon.ico
 
 # Profile
-nickname: Jeremy Bentham
+nickname: Renjie Deng
 
 ### this variable is MarkDown form.
-description: Lorem ipsum dolor sit amet, **consectetur adipiscing elit.** <br>Fusce eget urna vitae velit *eleifend interdum at ac* nisi.
-avatar: /image/avatar.jpeg
+description: 心有所向，日复一日，必有精进
+avatar: /image/ruiko.jpg
 
 # main menu navigation
 ## links key words should not be changed.
@@ -24,6 +24,9 @@ avatar: /image/avatar.jpeg
 ## Unused key can be commented out.
 links:
   Blog: /archives
+  Github: https://github.com/DRJ31
+  Twitter: https://twitter.com/dengrenjie
+  LinkedIn: http://linkedin.com/in/仁杰-邓-08a292131
   # Category:
   # Tags: 
   # Link:
@@ -31,25 +34,22 @@ links:
   # Publish:
   # Trophy:
   # Gallery:
-  # RSS:
+  RSS: /atom.xml
   # AliPay:
-  ZhiHu: https://www.zhihu.com/people/sirice
-  # LinkedIn:
+  # ZhiHu: https://www.zhihu.com/people/sirice
   # FaceBook:
-  # Twitter:
   # Skype:
   # CodeSandBox:
   # CodePen:
   # Sketch:
   # Gitlab:
   # Dribbble:
-  Instagram:
-  Reddit:
+  # Instagram:
+  # Reddit:
   # YouTube:
   # QQ:
   # Weibo:
   # WeChat:
-  Github: https://github.com/Siricee
 
 # how links show: you have 2 choice--text or icon.
 links_text_enable: false
@@ -67,10 +67,9 @@ post_copyright_enable: true
 
 post_copyright_author_enable: true
 post_copyright_permalink_enable: true
-post_copyright_license_enable: true
-post_copyright_license_text: Copyright (c) 2019 <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC-4.0</a> LICENSE
+post_copyright_license_enable: false
 post_copyright_slogan_enable: true
-post_copyright_slogan_text: Do you believe in <strong>DESTINY</strong>?
+post_copyright_slogan_text: 劳逸结合是不错，但也别放松过头
 ## toc
 post_toc_enable: true
 
